# lab09_2020

./: ..travis.yml.swp  CMakeLists.txt
include/: header.hpp
scripts/: checks.sh
sources/: source.cpp
